# qml-messenger

./: CMakeLists.txt  CMakeLists.txt.user.f701634  CMakeLists.txt.user.fd2bbb0  Chat.qml  ChatDelegate.qml  ChatList.qml  ChatStatusBar.qml  ChatsDelegate.qml  ChatsModel.qml  DebugRect.qml  IconButton.qml  README.md  SearchBar.qml  SendMessageBar.qml  chat.cpp  chatmodel.cpp  chatmodel.h  chatsmodel.cpp  chatsmodel.h  chatsproxymodel.cpp  chatsproxymodel.h  color_constants.js  main.cpp  main.qml  message.cpp  message.h  messages-test-data.txt  qml.qrc  qmlutils.cpp  qmlutils.h  testmodel.cpp  testmodel.h
backend-client/: CMakeLists.txt  backend-client_global.h  backendclient.cpp  backendclient.h
build-backend-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-backend-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-845a645306fa219bb8de.json  cmakeFiles-v1-edd0f34ab1f4f51028eb.json  codemodel-v2-5f54f7a73a9d5519d647.json  index-2023-08-30T12-41-55-0079.json  target-backend-client-Debug-756f9a404cd7d875c2b9.json  target-backend-client_autogen-Debug-62866637ccf2e4daed38.json  target-backend-client_autogen_timestamp_deps-Debug-5ec93004a6b87d562447.json
build-backend-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-backend-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: atomic.138C4A9112D5E078.idx  backend-client_global.h.0722ABF0A492F246.idx  backendclient.cpp.E31EC359AEEEDF84.idx  backendclient.h.D8B9A10C63DF8397.idx  corecrt.h.E4425A3B9B7A38F0.idx  corecrt_search.h.536D0ECD896EEBD4.idx  eh.h.EFEB33E1CB7D5C8C.idx  float.h.150230ED6E2F95DD.idx  qatomic.h.9C8796BF4D0D5BB1.idx  qatomic_cxx11.h.FA42D2DA1D6FE291.idx  qflags.h.15127D43F3CDCCD9.idx  qglobal.h.026F62E5FE5C8D0B.idx  stdlib.h.27ED8D42D22253AA.idx  type_traits.DC4352B718AC13F7.idx  utility.2E749CDEF7B5E96D.idx  vcruntime.h.F8815A8683230DD1.idx  xtr1common.A0F3C10BF0D387A0.idx  yvals_core.h.B5DFA2F7A17A9B92.idx
